# rust_axum_db

./: Cargo.toml
src/: lib.rs  main.rs
src/database/: data_mahasiswa.rs  mod.rs  prelude.rs
src/routes/: create_data_mahasiswa.rs  delete_mahasiswa.rs  get_mahasiswa.rs  mod.rs  response_format.rs  update_mahasiswa.rs  update_partial_mahasiswa.rs
